# SamSeesSheep

./: .env.example  .env.pod.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DATA_FORMAT.md  LICENSE  README.md  SETUP.md  VALIDATION.md  pyproject.toml
backend/: config.py  main.py  models.py
backend/pipeline/: depth.py  ear_angle.py  eup.py  local_orchestrator.py  mesh3d.py  narrative.py  orchestrator.py  segment.py  video.py
backend/routes/: analyze.py  export.py  label.py  session.py  upload.py
docs/: AP10K_TRANSFER.md  archive-paper.md  hf-model-card.md  linkedin-post-draft-ep3-v2.md  paper-substantiation.md  v0.3-benchmark.md  v0.4-benchmark.md  v0.5-benchmark.md  v0.6-benchmark.md  v0.7-benchmark.md
frontend/: index.html  label.html
paper/: README.md  paper.bib  paper.tex
scripts/: README.md  ap10k_transfer_experiment.sh  backup_dataset.sh  bootstrap_vast.sh  fetch_dataset.sh  pod_ssh.sh  push_clip.sh  run_ap10k_transfer_experiment.sh  start_pod_server.sh  sync_for_yolo.sh  sync_weights_from_pod.sh  train_on_pod.sh  use_cloud.sh  validate_dataset.py
sheep-yolo/: README.md  pyproject.toml  test-clips
sheep-yolo/artifacts/: bench_Test_Clip_Morning.json  bench_bootstrap_ci.json  bench_report-IMG_3651-3way.json  bench_report-IMG_3651-v04v05.json  bench_report-IMG_3651-v04v05v06.json  bench_report-IMG_3651-v04v05v07.json  bench_report-Test_Clip_Morning-v02v03v04.json  bench_residual_px-IMG_3651-v05v06v07.json  bench_topdown-IMG_3651.json  bench_v07-IMG_3651.json  window_sensitivity.json
sheep-yolo/backend/: config.py  main.py  models.py
sheep-yolo/backend/pipeline/: ear_angle.py  video.py
sheep-yolo/backend/routes/: analyze.py  upload.py
sheep-yolo/docs/: supervision-spike.md
sheep-yolo/frontend/: index.html
sheep-yolo/scripts/: bench_held_out.py  bench_topdown.py  bench_v02_v03.py  bench_v04_v05.py  bench_v04_v05_v06.py  bench_v04_v05_v07.py  bench_v07.py  crop_export.py  eval_transfer_experiment.py  gen_bench_Test_Clip_Morning.py  gen_ear_angle_chart.py  gen_residual_px.py  gen_window_sensitivity_fig.py  prep_ap10k.py  prep_experiment_split.py  render_dedup.py  render_ekg.py  render_supervision_spike.py  train_topdown.sh  verify_paper_claims.py  window_sensitivity.py
sheep-yolo/scripts/archive/: README.md  bench_v02_v03.py  bench_v04_v05.py  bench_v04_v05_v06.py  bench_v04_v05_v07.py  bench_v07.py
sheep-yolo/scripts/showcase/: __init__.py  ear_geometry.py  render_cross_session.py  render_multi_lane.py  sv_annot.py  tracking_cache.py
sheep-yolo/scripts/showcase/configs/: black_ewe_cross_session.local.example.json  img_3651_6lane.json
sheep-yolo/test-clips/: README.md
sheep-yolo/trackers/: botsort_reid.yaml
src/: cli.py
