[project]
name = "sheep-seg"
version = "0.1.0"
description = "Privacy-first computer vision for animal welfare on small farms"
requires-python = ">=3.11,<3.13"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
    "pillow-heif>=0.18",
    "opencv-python-headless>=4.9",
    # numpy<2 because torch 2.1.x was compiled against numpy 1.x; under
    # numpy 2.x torch emits "Failed to initialize NumPy: _ARRAY_API not found"
    # and subtle runtime mismatches. Stays here until we can bump torch to
    # >=2.3 (which is numpy-2-safe) without breaking the pod's NCCL.
    "numpy>=1.26,<2",
    # Pin torch to 2.1.x — newer versions (torch 2.11+) bundle NCCL that
    # requires pod system libs the runpod-torch-v21 template doesn't have,
    # causing `undefined symbol: ncclCommWindowDeregister` at import time.
    # torch 2.1.x + CUDA 11.8 works on RunPod RTX 4090 pods out of the box.
    "torch>=2.1,<2.2",
    "torchvision>=0.16,<0.17",
    "transformers>=4.40",
    "imageio[pyav]>=2.34",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

# Pull torch from PyTorch's CUDA 11.8 index instead of PyPI default so the
# bundled CUDA/NCCL libs match older pod templates. RunPod's default image
# comes with CUDA 11.8 libs pre-installed; cu118 torch wheels link against
# those and Just Work.
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
